--- a/thirdDime/static/js/funda/funda6.modal.html
+++ b/thirdDime/static/js/funda/funda6.modal.html
@@ -3,6 +3,10 @@
 		<div layout="row" layout-align="end"><md-button ng-click="fundaRoot(false)">Close</md-button></div>
 		<br>
 		<br>
+		<div layout="row" layout-align="center center">
+			<div ng-show="result"> <h1>CORRECT !</h1></div>
+			<div ng-hide="result"> <h1>The Red Drapes</h1></div>
+		</div>
 		<div layout="row" layout-align="center center" align="right">
 			<span flex="15"><i class="fa fa-quote-left"></i></span>
 			<span flex="85"></span>
@@ -10,11 +14,12 @@
 		<div layout="row" layout-align="center center">
 			<span flex="15"></span>
 			<span flex="70">
-			<b>Futurism</b> celebrated advanced technology and urban modernity. Committed to the new, its members wished to destroy older forms of culture and to demonstrate the beauty of modern life - the beauty of the machine, speed, violence and change. <br>
-<b>Impressionism</b> was a style of representational art that did not necessarily rely on realistic depictions. Scientific thought at the time was beginning to recognize that what the eye perceived and what the brain understood were two different things. The Impressionists sought to capture the former - the optical effects of light - to convey the passage of time, changes in weather, and other shifts in the atmosphere in their canvases.<br>
-<b>Cubist</b> paintings aren’t meant to be realistic or life-like in any way. Instead, after looking at the subject from every possible angle, the artist will piece together fragments from different vantage points into one painting. In doing this, the artist is attempting to give a fuller, more detailed explanation of the subject—breaking past barriers of space and time.<br>
-The <b>Fauve</b> painters were the first to break with Impressionism as well as with older, traditional methods of perception. Their spontaneous, often subjective response to nature was expressed in bold, undisguised brushstrokes and high-keyed, vibrant colors directly from the tube.
-				
+				<p><strong>The theatrical drape of blood-red cloth looms in the upper portion of the canvas with the left portion leaving the painting’s frame, the artist possibly used this to show the Holy Virgin’s assumption into heaven. </strong>
+This painting illustrates the iconographic and formal revolution that Caravaggio instigated in the late 16th and early 17th centuries.He took on the task of translating people's reality and emotions without worrying about the conventions of representations of the sacred. The scene is very realistic, the body of the Virgin is not sacred except for the fine aureole at the top of its head. The painting fetched Caravaggio a lot of ridicule especially from the Church.
+				</p>
+				<div layout="row" layout-align="center center">
+		        	<img style="margin: 10px; max-width: 100%" src="/static/images/virgin_funda.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)">
+		        </div>
 			</span>
 			<span flex="15"></span>
 		</div>
