--- a/thirdDime/static/js/funda/funda8.modal.html
+++ b/thirdDime/static/js/funda/funda8.modal.html
@@ -4,7 +4,8 @@
 		<br>
 		<br>
 		<div layout="row" layout-align="center center">
-			<div> <h1>ALL of them</h1></div>
+			<div ng-show="result"> <h1>CORRECT !</h1></div>
+			<div ng-hide="result"> <h1>It is the third painting - Third of May</h1></div>
 		</div>
 		<div layout="row" layout-align="center center" align="right">
 			<span flex="15"><i class="fa fa-quote-left"></i></span>
@@ -13,7 +14,12 @@
 		<div layout="row" layout-align="center center">
 			<span flex="15"></span>
 			<span flex="70">
-			Hyperrealism is a genre of painting and sculpture resembling a high resolution photograph. It is a fully-fledged school of art and can be considered as an advancement of Photorealism by the methods used to create the resulting photorealistic paintings or sculptures. The term is primarily applied to an independent art movement and art style in the United States and Europe that has recently developed since the early 2000s.
+					Artists are historians and their art the journal. Undeniably, art is not only an expression of beauty and creativity; it is also a reflection of the times.Events such as war impact artists even deeper. <br>
+		The first painting is by Picasso where he depicts a massacre during the Korean war.<br>
+		The second painting is by Otto Dix which represents a ruthless class struggle taking place in Germany.<br>
+		The third painting is by Goya where he presents a scene from the Peninsular war.<br>
+		The fourth painting is by Manet depicting the execution of Maximillian by a firing squad.<br>
+		Goya's painting is the original inspiration. 
 				
 			</span>
 			<span flex="15"></span>
