--- a/thirdDime/static/js/question/question7.modal.html
+++ b/thirdDime/static/js/question/question7.modal.html
@@ -8,37 +8,37 @@
         <div layout="row">
             <i class="fa fa-paint-brush"> </i>
                 <div class="qStyle">
-                    Which painting do you think best represents the story and Armida’s state?
+                    Which one is a painting?
                 </div>
         </div>
       </md-subheader>
-        <div layout="row" layout-align="end center" style="font-size: .77em">Options at bottom.</div>
+        <div layout="row" layout-align="end center" style="font-size: .77em">Click on an image to select.</div>
   	<md-tabs md-selected="data.selectedIndex">
       <md-tab id="tab1" aria-controls="tab1-content">
-        By Van Dyck
+        Item One
       </md-tab>
       <md-tab id="tab2" aria-controls="tab2-content">
-        By Conca
+        Item Two
       </md-tab>
       <md-tab id="tab3" aria-controls="tab3-content">
-        By Poussin
+        Item Three
       </md-tab>
       <md-tab id="tab4" aria-controls="tab4-content">
-        By Desubleo
+        Item four
       </md-tab>
     </md-tabs>
     <ng-switch on="data.selectedIndex" class="tabpanel-container">
         <div role="tabpanel" id="tab1-content" aria-labelledby="tab1" ng-switch-when="0" md-swipe-left="next()" md-swipe-right="previous()" layout="row" layout-align="center center">
-        	<img style="margin: 10px; max-width: 100%" src="/static/images/armida1.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)" ng-click="answer7('one')">
+        	<img style="margin: 10px; max-width: 100%" src="/static/images/real1.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)" ng-click="answer8()">
         </div>
         <div role="tabpanel" id="tab2-content" aria-labelledby="tab2" ng-switch-when="1" md-swipe-left="next()" md-swipe-right="previous()" layout="row" layout-align="center center">
-        	<img style="margin: 10px; max-width: 100%" src="/static/images/armida2.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)" ng-click="answer7('two')">
+        	<img style="margin: 10px; max-width: 100%" src="/static/images/real2.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)" ng-click="answer8()">
         </div>
         <div role="tabpanel" id="tab3-content" aria-labelledby="tab3" ng-switch-when="2" md-swipe-left="next()" md-swipe-right="previous()" layout="row" layout-align="center center">
-          <img style="margin: 10px; max-width: 100%" src="/static/images/armida3.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)" ng-click="answer7('three')">
+          <img style="margin: 10px; max-width: 100%" src="/static/images/real3.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)" ng-click="answer8()">
         </div>
         <div role="tabpanel" id="tab4-content" aria-labelledby="tab4" ng-switch-when="3" md-swipe-left="next()" md-swipe-right="previous()" layout="row" layout-align="center center">
-          <img style="margin: 10px; max-width: 100%" src="/static/images/armida4.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)" ng-click="answer7('four')">
+          <img style="margin: 10px; max-width: 100%" src="/static/images/real4.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)" ng-click="answer8()">
         </div>
     </ng-switch>
     <div class="after-tabs-area" layout="row" layout-sm="column" layout-margin layout-align="left center">
