--- a/thirdDime/static/js/funda/funda4.modal.html
+++ b/thirdDime/static/js/funda/funda4.modal.html
@@ -5,7 +5,7 @@
 		<br>
 		<div layout="row" layout-align="center center">
 			<div ng-show="result"> <h1>CORRECT !</h1></div>
-			<div ng-hide="result"> <h1>One with the Queen and her children</h1></div>
+			<div ng-hide="result"> <h1>It is the Cypress tree</h1></div>
 		</div>
 		<div layout="row" layout-align="center center" align="right">
 			<span flex="15"><i class="fa fa-quote-left"></i></span>
@@ -14,13 +14,7 @@
 		<div layout="row" layout-align="center center">
 			<span flex="15"></span>
 			<span flex="70">
-				<p><strong>In the third painting everything from the Queen's appearence to the surrounding potrays the Queen as a plain, no fuss lady. The children are central in the attempt to garner empathy.</strong></p>
-				<p>The first portrait shows the Queen as a fashionista with a bold actressy pose. Her dress, wig, everything about her is magnificent and clearly a testimony of her stature and power. The room has large stage curtains, the Queen has her hand on a globe, a symbol of her dominion on large territories. <br>
-
-The second portrait shows the Queen in a plain English muslin dress with a straw hat. Quite ordinary, one would say and may be an attempt to relate to the general masses. But a Queen who shows herself like this in public is insulting the people and France. <br>
-
-In the third painting the Queen is shown with her children in an austere surrounding. She is dressed in red velvet, authoritative but not extravagant. She is wearing no jewellery, a wise move given her nickname ‘Madame Deficit’. Her portrayal as a mother is also an attempt to garner empathy from the citizenry.
-				</p>
+				Renaissance artists used symbolic objects to communicate with an audience that was largely illiterate. During the Victorian era, the cypress with its dark branches and tall columnar shape was a symbol of the cemetery and death and was widely planted in European as well as Middle Eastern graveyards. In the ‘Starry Night’ Van Gogh invoked the above symbolism.
 			</span>
 			<span flex="15"></span>
 		</div>
