--- a/thirdDime/static/js/funda/funda5.modal.html
+++ b/thirdDime/static/js/funda/funda5.modal.html
@@ -1,41 +1,31 @@
 <md-dialog aria-label="Mango (Fruit)" class="funda">
-	<md-content style="background-color: {{color}}; color: white">
-		<div layout="row" layout-align="end"><md-button ng-click="fundaRoot(false)" style="color: white">Close</md-button></div>
-		<br>
-		<br>
-		<div layout="row" layout-align="center center">
-			<div ng-show="result"> <h1>CORRECT !</h1></div>
-			<div ng-hide="result"> <h1>The Skull</h1></div>
-		</div>
-		<div layout="row" layout-align="center center" align="right">
-			<span flex="15"><i class="fa fa-quote-left"></i></span>
-			<span flex="85"></span>
-		</div>
-		<div layout="row" layout-align="center center">
-			<span flex="15"></span>
-			<span flex="70">
-			When we turn this painting, the rich trappings fade out and the ultimate victor comes into focus. Death eclipses everything.
-				
-				<div layout="row" layout-align="center center">
-		        	<img style="margin: 10px; max-width: 100%" src="/static/images/amb.gif" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)">
-		        </div>
-		       Well almost everything. There is a hidden crucifx in the painting .
-Holbein raises another question through this painting. is death really
-the ultimate victor ?
-			</span>
-			<span flex="15"></span>
-		</div>
-		<div layout="row" layout-align="center center">
-			<span flex="85"></span>
-			<span flex="15"><i class="fa fa-quote-right"></i></span>
-		</div>
-	</md-content>
-	<div class="md-actions" layout="row">
-	    <md-button ng-click="goBack()" class="md-primary">
-	      Back
-	    </md-button>
-	    <md-button ng-click="fundaRoot(true)" class="md-primary">
-	      Next
-	    </md-button>
-    </div>
-</md-dialog>
+ 	<div ng-controller="ArmidaController">
+		<md-content style="background-color: {{color}}; color: white">
+		<div layout="row" layout-align="end"><md-button ng-click="fundaRoot(false)">Close</md-button></div>
+			<div layout="row" layout-align="center center">
+				<span flex="15"></span>
+				<span flex="70">
+					<h4>As we can see here the same story can be told in several ways. Every artist brings something unique to the narrative, an element that resonated with him the most. And it is this element that bears the watermark of the artist’s creation. 
+					</h4>
+					<h5>By Anthony van Dyck ({{vote71}}%)</h5>
+					<md-progress-linear md-theme="red" md-mode="determinate" ng-value="vote71"></md-progress-linear>
+					<h5>By Sebastiano Conca ({{vote72}}%)</h5>
+					<md-progress-linear md-theme="brown" md-mode="determinate" ng-value="vote72"></md-progress-linear>
+					<h5>By Nicolas Poussin ({{vote73}}%)</h5>
+					<md-progress-linear md-theme="green" md-mode="determinate" ng-value="vote73"></md-progress-linear>
+					<h5>By Michele Desubleo ({{vote74}}%)</h5>
+					<md-progress-linear md-theme="yellow" md-mode="determinate" ng-value="vote74"></md-progress-linear>
+				</span>
+				<span flex="15"></span>
+			</div>
+		</md-content>
+		<div class="md-actions" layout="row">
+		    <md-button ng-click="goBack()" class="md-primary">
+		      Back
+		    </md-button>
+		    <md-button ng-click="fundaRoot(true)" class="md-primary">
+		      Next
+		    </md-button>
+	    </div>
+	</div>
+	</md-dialog>
