--- a/thirdDime/static/js/funda/funda7.modal.html
+++ b/thirdDime/static/js/funda/funda7.modal.html
@@ -1,31 +1,34 @@
 <md-dialog aria-label="Mango (Fruit)" class="funda">
- 	<div ng-controller="ArmidaController">
-		<md-content style="background-color: {{color}}; color: white">
+	<md-content style="background-color: {{color}}; color: white">
 		<div layout="row" layout-align="end"><md-button ng-click="fundaRoot(false)">Close</md-button></div>
-			<div layout="row" layout-align="center center">
-				<span flex="15"></span>
-				<span flex="70">
-					<h4>As we can see here the same story can be told in several ways. Every artist brings something unique to the narrative, an element that resonated with him the most. And it is this element that bears the watermark of the artist’s creation. 
-					</h4>
-					<h5>By Anthony van Dyck ({{vote71}}%)</h5>
-					<md-progress-linear md-theme="red" md-mode="determinate" ng-value="vote71"></md-progress-linear>
-					<h5>By Sebastiano Conca ({{vote72}}%)</h5>
-					<md-progress-linear md-theme="brown" md-mode="determinate" ng-value="vote72"></md-progress-linear>
-					<h5>By Nicolas Poussin ({{vote73}}%)</h5>
-					<md-progress-linear md-theme="green" md-mode="determinate" ng-value="vote73"></md-progress-linear>
-					<h5>By Michele Desubleo ({{vote74}}%)</h5>
-					<md-progress-linear md-theme="yellow" md-mode="determinate" ng-value="vote74"></md-progress-linear>
-				</span>
-				<span flex="15"></span>
-			</div>
-		</md-content>
-		<div class="md-actions" layout="row">
-		    <md-button ng-click="goBack()" class="md-primary">
-		      Back
-		    </md-button>
-		    <md-button ng-click="fundaRoot(true)" class="md-primary">
-		      Next
-		    </md-button>
-	    </div>
-	</div>
-	</md-dialog>
+		<br>
+		<br>
+		<div layout="row" layout-align="center center">
+			<div> <h1>ALL of them</h1></div>
+		</div>
+		<div layout="row" layout-align="center center" align="right">
+			<span flex="15"><i class="fa fa-quote-left"></i></span>
+			<span flex="85"></span>
+		</div>
+		<div layout="row" layout-align="center center">
+			<span flex="15"></span>
+			<span flex="70">
+			Hyperrealism is a genre of painting and sculpture resembling a high resolution photograph. It is a fully-fledged school of art and can be considered as an advancement of Photorealism by the methods used to create the resulting photorealistic paintings or sculptures. The term is primarily applied to an independent art movement and art style in the United States and Europe that has recently developed since the early 2000s.
+				
+			</span>
+			<span flex="15"></span>
+		</div>
+		<div layout="row" layout-align="center center">
+			<span flex="85"></span>
+			<span flex="15"><i class="fa fa-quote-right"></i></span>
+		</div>
+	</md-content>
+	<div class="md-actions" layout="row">
+	    <md-button ng-click="goBack()" class="md-primary">
+	      Back
+	    </md-button>
+	    <md-button ng-click="fundaRoot(true)" class="md-primary">
+	      Next
+	    </md-button>
+    </div>
+</md-dialog>
