--- a/thirdDime/static/js/question/question2.modal.html
+++ b/thirdDime/static/js/question/question2.modal.html
@@ -8,20 +8,23 @@
     		<div layout="row">
         		<i class="fa fa-paint-brush"> </i>
                 <div class="qStyle">
-                    What object has the artist used to represent Assumption of Mary into Heaven ?
+                    What do you think this painting best relates to ?
+                    [No correct answer]
                 </div>
     		</div>
     	</md-subheader>
-        <div layout="row" layout-align="end center" style="font-size: .77em">Choose from the options below</div>
-        <div layout="row" layout-align="center center">
-        	<img style="margin: 10px; max-width: 100%" src="/static/images/virgin.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)">
+        <div layout="row" layout-align="end center" style="font-size: .77em">Choose from options below.</div>
+        <div layout="row" layout-align="end center">
+        	<img style="margin: 10px; max-width: 100%" src="/static/images/memory.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)">
             <div flex="20">
                 <md-radio-group>
-                    <md-radio-button value="Girl in front" aria-label="Label 1" ng-click="answer2('Girl')">Girl in front</md-radio-button>
-                    <md-radio-button value="Drapes" aria-label="Label 2" ng-click="answer2('Drapes')"> Drapes </md-radio-button>
-                    <md-radio-button value="Man in center" aria-label="Label 3" ng-click="answer2('Man')">Man in center</md-radio-button>
+                    <md-radio-button value="Decay" aria-label="Label 1" ng-click="answer3('one')">Death and decay</md-radio-button>
+                    <md-radio-button value="Relativity" aria-label="Label 2" ng-click="answer3('two')"> Relativity's idea of time </md-radio-button>
+                    <md-radio-button value="Dream" aria-label="Label 3" ng-click="answer3('three')">Dream state</md-radio-button>
+                    <md-radio-button value="Fluidity" aria-label="Label 4" ng-click="answer3('four')">Fluidity of time</md-radio-button>
                 </md-radio-group>       
             </div>
         </div>
+        
     </md-content>
 </md-dialog>
