--- a/thirdDime/static/js/question/question3.modal.html
+++ b/thirdDime/static/js/question/question3.modal.html
@@ -8,22 +8,21 @@
     		<div layout="row">
         		<i class="fa fa-paint-brush"> </i>
                 <div class="qStyle">
-                    What do you think this painting best relates to ?
+                    Ultimate power is the one, that eclipses everything when it steps in. What object do you think has the painter accredited this “ultimate power” to?
                 </div>
     		</div>
     	</md-subheader>
-        <div layout="row" layout-align="end left" style="font-size: .77em">Choose from options below.</div>
-        <div layout="row" layout-align="end center">
-        	<img style="margin: 10px; max-width: 100%" src="/static/images/memory.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)">
+        <div layout="row" layout-align="end center" style="font-size: .77em">Choose from the options below</div>
+        <div layout="row" layout-align="center center">
+        	<img style="margin: 10px; max-width: 100%" src="/static/images/amb.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)">
             <div flex="20">
                 <md-radio-group>
-                    <md-radio-button value="Decay" aria-label="Label 1" ng-click="answer3('one')">Death and decay</md-radio-button>
-                    <md-radio-button value="Relativity" aria-label="Label 2" ng-click="answer3('two')"> Relativity's idea of time </md-radio-button>
-                    <md-radio-button value="Dream" aria-label="Label 3" ng-click="answer3('three')">Dream state</md-radio-button>
-                    <md-radio-button value="Fluidity" aria-label="Label 4" ng-click="answer3('four')">Fluidity of time</md-radio-button>
+                    <md-radio-button value="God in shadows" aria-label="Label 1" ng-click="answer5('one')">God in shadows</md-radio-button>
+                    <md-radio-button value="Wealth and Authority" aria-label="Label 2" ng-click="answer5('two')"> Wealth and Authority </md-radio-button>
+                    <md-radio-button value="Death" aria-label="Label 4" ng-click="answer5('three')">Death</md-radio-button>
+                    <md-radio-button value="Knowledge and Wisdom" aria-label="Label 3" ng-click="answer5('four')">Knowledge and Wisdom</md-radio-button>
                 </md-radio-group>       
             </div>
         </div>
-        
     </md-content>
 </md-dialog>
