--- a/thirdDime/static/js/question/question4.modal.html
+++ b/thirdDime/static/js/question/question4.modal.html
@@ -1,39 +1,28 @@
 <md-dialog aria-label="Mango (Fruit)" class="que">
-  <md-content style="background-color: {{color}}">
-	<div layout="row" layout-align="space-between">
-		<div><md-button ng-click="goBack()">Back</md-button></div>
-		<div><md-button ng-click="cancel()">Close</md-button></div>
-	</div>
-    <md-subheader class="md-sticky" style="background-color: {{color}}">
-        <div layout="row">
-            <i class="fa fa-paint-brush"> </i>
+	<md-content style="background-color: {{color}}">
+		<div layout="row" layout-align="space-between">
+			<div><md-button ng-click="goBack()">Back</md-button></div>
+			<div><md-button ng-click="cancel()">Close</md-button></div>
+		</div>
+    	<md-subheader class="md-sticky" style="background-color: {{color}}">
+    		<div layout="row">
+        		<i class="fa fa-paint-brush"> </i>
                 <div class="qStyle">
-                    Put your thinking caps on and tell us which according to you is the one she  commissioned as A PR strategy ?
+                    What might signify this bridge between the terrestrial and celestial ?
                 </div>
+    		</div>
+    	</md-subheader>
+        <div layout="row" layout-align="end center" style="font-size: .77em">Choose from the options below</div>
+        <div layout="row" layout-align="end center">
+        	<img style="margin: 10px; max-width: 100%" src="/static/images/starry.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)" style="box-shadow: 0px 0px 0px 5px #000, 0px 0px 0px 10px #fff">
+            <div flex="20">
+                <md-radio-group>
+                    <md-radio-button value="Church" aria-label="Label 1" ng-click="answer1('church')">Church</md-radio-button>
+                    <md-radio-button value="Constellation" aria-label="Label 2" ng-click="answer1('constellation')"> Constellation </md-radio-button>
+                    <md-radio-button value="Cypress Tree" aria-label="Label 3" ng-click="answer1('cypress')">Cypress Tree</md-radio-button>
+                    <md-radio-button value="Moon" aria-label="Label 4" ng-click="answer1('moon')">Moon</md-radio-button>
+                </md-radio-group>       
+            </div>
         </div>
-      </md-subheader>
-        <div layout="row" layout-align="end center" style="font-size: .77em">Click any painting to select.</div>
-  	<md-tabs md-selected="data.selectedIndex">
-      <md-tab id="tab1" aria-controls="tab1-content">
-        By Lebrun (1783)
-      </md-tab>
-      <md-tab id="tab2" aria-controls="tab2-content">
-        By Gautier-Dagoty
-      </md-tab>
-      <md-tab id="tab3" aria-controls="tab3-content">
-        By Lebrun (1787)
-      </md-tab>
-    </md-tabs>
-    <ng-switch on="data.selectedIndex" class="tabpanel-container">
-        <div id="tab1-content" aria-labelledby="tab1" ng-switch-when="0" md-swipe-left="next()" md-swipe-right="previous()" layout="row" layout-align="center center">
-        	<img style="margin: 10px; max-width: 100%" src="/static/images/marrie1.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)" ng-click="answer4('1783')">
-        </div>
-        <div id="tab2-content" aria-labelledby="tab2" ng-switch-when="1" md-swipe-left="next()" md-swipe-right="previous()" layout="row" layout-align="center center">
-        	<img style="margin: 10px; max-width: 100%" src="/static/images/marrie2.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)" ng-click="answer4('1775')">
-        </div>
-        <div id="tab3-content" aria-labelledby="tab3" ng-switch-when="2" md-swipe-left="next()" md-swipe-right="previous()" layout="row" layout-align="center center">
-        	<img style="margin: 10px; max-width: 100%" src="/static/images/marrie3.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)" ng-click="answer4('1787')">
-        </div>
-    </ng-switch>
-  </md-content>
+    </md-content>
 </md-dialog>
