--- a/thirdDime/static/js/question/question5.modal.html
+++ b/thirdDime/static/js/question/question5.modal.html
@@ -1,28 +1,49 @@
 <md-dialog aria-label="Mango (Fruit)" class="que">
-	<md-content style="background-color: {{color}}">
-		<div layout="row" layout-align="space-between">
-			<div><md-button ng-click="goBack()">Back</md-button></div>
-			<div><md-button ng-click="cancel()">Close</md-button></div>
-		</div>
-    	<md-subheader class="md-sticky" style="background-color: {{color}}">
-    		<div layout="row">
-        		<i class="fa fa-paint-brush"> </i>
+  <md-content style="background-color: {{color}}">
+	<div layout="row" layout-align="space-between">
+		<div><md-button ng-click="goBack()">Back</md-button></div>
+		<div><md-button ng-click="cancel()">Close</md-button></div>
+	</div>
+    <md-subheader class="md-sticky" style="background-color: {{color}}">
+        <div layout="row">
+            <i class="fa fa-paint-brush"> </i>
                 <div class="qStyle">
-                    Ultimate power is the one, that eclipses everything when it steps in. What object do you think has the painter accredited this “ultimate power” to?
+                    Which painting do you think best represents the story and Armida’s state?
+                    [No correct answer]
                 </div>
-    		</div>
-    	</md-subheader>
-        <div layout="row" layout-align="end center" style="font-size: .77em">Choose from the options below</div>
-        <div layout="row" layout-align="center center">
-        	<img style="margin: 10px; max-width: 100%" src="/static/images/amb.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)">
-            <div flex="20">
-                <md-radio-group>
-                    <md-radio-button value="God in shadows" aria-label="Label 1" ng-click="answer5('one')">God in shadows</md-radio-button>
-                    <md-radio-button value="Wealth and Authority" aria-label="Label 2" ng-click="answer5('two')"> Wealth and Authority </md-radio-button>
-                    <md-radio-button value="Death" aria-label="Label 4" ng-click="answer5('three')">Death</md-radio-button>
-                    <md-radio-button value="Knowledge and Wisdom" aria-label="Label 3" ng-click="answer5('four')">Knowledge and Wisdom</md-radio-button>
-                </md-radio-group>       
-            </div>
         </div>
-    </md-content>
+      </md-subheader>
+        <div layout="row" layout-align="end center" style="font-size: .77em">Options at bottom.</div>
+  	<md-tabs md-selected="data.selectedIndex">
+      <md-tab id="tab1" aria-controls="tab1-content">
+        By Van Dyck
+      </md-tab>
+      <md-tab id="tab2" aria-controls="tab2-content">
+        By Conca
+      </md-tab>
+      <md-tab id="tab3" aria-controls="tab3-content">
+        By Poussin
+      </md-tab>
+      <md-tab id="tab4" aria-controls="tab4-content">
+        By Desubleo
+      </md-tab>
+    </md-tabs>
+    <ng-switch on="data.selectedIndex" class="tabpanel-container">
+        <div role="tabpanel" id="tab1-content" aria-labelledby="tab1" ng-switch-when="0" md-swipe-left="next()" md-swipe-right="previous()" layout="row" layout-align="center center">
+        	<img style="margin: 10px; max-width: 100%" src="/static/images/armida1.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)" ng-click="answer7('one')">
+        </div>
+        <div role="tabpanel" id="tab2-content" aria-labelledby="tab2" ng-switch-when="1" md-swipe-left="next()" md-swipe-right="previous()" layout="row" layout-align="center center">
+        	<img style="margin: 10px; max-width: 100%" src="/static/images/armida2.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)" ng-click="answer7('two')">
+        </div>
+        <div role="tabpanel" id="tab3-content" aria-labelledby="tab3" ng-switch-when="2" md-swipe-left="next()" md-swipe-right="previous()" layout="row" layout-align="center center">
+          <img style="margin: 10px; max-width: 100%" src="/static/images/armida3.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)" ng-click="answer7('three')">
+        </div>
+        <div role="tabpanel" id="tab4-content" aria-labelledby="tab4" ng-switch-when="3" md-swipe-left="next()" md-swipe-right="previous()" layout="row" layout-align="center center">
+          <img style="margin: 10px; max-width: 100%" src="/static/images/armida4.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)" ng-click="answer7('four')">
+        </div>
+    </ng-switch>
+    <div class="after-tabs-area" layout="row" layout-sm="column" layout-margin layout-align="left center">
+        
+    </div>
+  </md-content>
 </md-dialog>
