--- a/thirdDime/static/js/question/question9.modal.html
+++ b/thirdDime/static/js/question/question9.modal.html
@@ -8,41 +8,32 @@
         <div layout="row">
             <i class="fa fa-paint-brush"> </i>
                 <div class="qStyle">
-                    Which painting inspired the rest of them ?
+                    Put your thinking caps on and tell us which according to you is the one she  commissioned as A PR strategy ?
                 </div>
         </div>
       </md-subheader>
-        <div layout="row" layout-align="end center" style="font-size: .77em">Click on an image to select.</div>
+        <div layout="row" layout-align="end center" style="font-size: .77em">Click any painting to select.</div>
   	<md-tabs md-selected="data.selectedIndex">
       <md-tab id="tab1" aria-controls="tab1-content">
-        Item One
+        By Lebrun (1783)
       </md-tab>
       <md-tab id="tab2" aria-controls="tab2-content">
-        Item Two
+        By Gautier-Dagoty
       </md-tab>
       <md-tab id="tab3" aria-controls="tab3-content">
-        Item Three
-      </md-tab>
-      <md-tab id="tab4" aria-controls="tab4-content">
-        Item four
+        By Lebrun (1787)
       </md-tab>
     </md-tabs>
     <ng-switch on="data.selectedIndex" class="tabpanel-container">
-        <div role="tabpanel" id="tab1-content" aria-labelledby="tab1" ng-switch-when="0" md-swipe-left="next()" md-swipe-right="previous()" layout="row" layout-align="center center">
-        	<img style="margin: 10px; max-width: 100%" src="/static/images/inspire1.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)" ng-click="answer9('One')">
+        <div id="tab1-content" aria-labelledby="tab1" ng-switch-when="0" md-swipe-left="next()" md-swipe-right="previous()" layout="row" layout-align="center center">
+        	<img style="margin: 10px; max-width: 100%" src="/static/images/marrie1.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)" ng-click="answer4('1783')">
         </div>
-        <div role="tabpanel" id="tab2-content" aria-labelledby="tab2" ng-switch-when="1" md-swipe-left="next()" md-swipe-right="previous()" layout="row" layout-align="center center">
-        	<img style="margin: 10px; max-width: 100%" src="/static/images/inspire2.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)" ng-click="answer9('Two')">
+        <div id="tab2-content" aria-labelledby="tab2" ng-switch-when="1" md-swipe-left="next()" md-swipe-right="previous()" layout="row" layout-align="center center">
+        	<img style="margin: 10px; max-width: 100%" src="/static/images/marrie2.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)" ng-click="answer4('1775')">
         </div>
-        <div role="tabpanel" id="tab3-content" aria-labelledby="tab3" ng-switch-when="2" md-swipe-left="next()" md-swipe-right="previous()" layout="row" layout-align="center center">
-          <img style="margin: 10px; max-width: 100%" src="/static/images/inspire3.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)" ng-click="answer9('Three')">
-        </div>
-        <div role="tabpanel" id="tab4-content" aria-labelledby="tab4" ng-switch-when="3" md-swipe-left="next()" md-swipe-right="previous()" layout="row" layout-align="center center">
-          <img style="margin: 10px; max-width: 100%" src="/static/images/inspire4.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)" ng-click="answer9('Four')">
+        <div id="tab3-content" aria-labelledby="tab3" ng-switch-when="2" md-swipe-left="next()" md-swipe-right="previous()" layout="row" layout-align="center center">
+        	<img style="margin: 10px; max-width: 100%" src="/static/images/marrie3.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)" ng-click="answer4('1787')">
         </div>
     </ng-switch>
-    <div class="after-tabs-area" layout="row" layout-sm="column" layout-margin layout-align="left center">
-        
-    </div>
   </md-content>
 </md-dialog>
